messaging_app/blue_deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app-blue
  template:
    metadata:
      labels:
        app: messaging-app-blue
    spec:
      containers:
        - name: messaging-app
          image: ejcodes/messaging-app:v1.0.0
          ports:
            - containerPort: 8080
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app-blue
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
