messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-deployment-service
spec:
  selector:
    app: messaging-app-green
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
